--- a/PhoneBook/web/view/projectInfo.html
+++ b/PhoneBook/web/view/projectInfo.html
@@ -11,53 +11,45 @@
     </head>
 
   <body>
-    <div class="container">
-  <div class="row">
-    <div class="span12">
-      <div class="head">
-        <div class="row-fluid">
-            <div class="span12">
-                <div class="span6">
-                    <h1 class="muted">PHONEBOOK</h1>
-                </div>
+    <body  style="background-image: url(/Phonebook/images/rrr.jpg);">
+        <div class="container">
+            <div class="row" style="background-color: white; width:1200px">
+                <div class="span12"  style="background-color: white; width: 1150px;">
+                    <div class="head">
+                        <div class="row-fluid">
+                            <div class="span12">
+                                <div class="span6">
+                                    <h1 class="muted">PHONEBOOK</h1>
+                                </div>
 
-                <div class="span4 offset2" style="margin-top:15px;">
-                    <button class="btn pull-right" type="button">Sign In</button>
-                </div>
-            </div>
-        </div>
+                                <div class="span4 offset2" style="margin-top:15px;">
+                                    <button class="btn pull-right" type="button">Sign In</button>
+                                </div>
+                            </div>
+                        </div>
 
-        <div class="navbar">
-            <div class="navbar-inner">
-                <div class="container">
-                    <ul class="nav">
-                         <li>
-                            <a href="/Phonebook/">Main</a>
-                        </li>
-
-                        <li>
-                            <a href="/Phonebook/view/phonenumbers.html">Abonent</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Numbers</a>
-                        </li>
-
-                        <li>
-                            <a href="/Phonebook/view/projectInfo.html">About</a>
-                        </li>
-                    </ul>
+                        <div class="navbar">
+                            <div class="navbar-inner">
+                                <div class="container">
+                                    <ul class="nav">
+                                        <li>
+                                            <a href="/Phonebook/index_1.html">Главная</a>
+                                        </li>
+                                        <li>
+                                            <a href="/Phonebook/view/projectInfo.html">О Нас</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
-      <div class="container">
-      <div class="row">
-          <div  class="col-lg-4 col-md-6 col-sm-6 col-xs-6"></div>
-                              <p style="font-size:40px">Weclome to PHONEBOOK</p>
+      <div class="container" style="background-color: white;">
+      <div class="row" style="background-color: white;">
+          <div  class="col-lg-4 col-md-6 col-sm-6 col-xs-6" style="background-color: white;"></div>
+                              <p style="font-size:40px">Welcome to PHONEBOOK</p>
       </div>
     </div>
     <!--  ================================================== -->
